<resources>
    <string name="app_name">Clozet</string>
    <string name="weather">weather</string>
    <string name="set_up">Initial Settings</string>
    <string name="change_settings">These can be changed any time in Settings</string>
    <string name="choose_unit">Choose your preferred temperature unit:</string>
    <string name="choose_gender">Choose your gender:</string>
    <string name="enter_zipcode">Enter your zip code:</string>
    <string name="hint_zipcode">Enter zip code</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="initial_settings_done">All Set!</string>

    <!-- Menu Items -->
    <string name="home">Home</string>
    <string name="wardrobe">Wardrobe</string>
    <string name="inventory">Full Inventory</string>
    <string name="settings">Settings</string>

    <!-- SharedPreferences Keys -->
    <string name="saved_temp_unit">SAVED_TEMP_UNIT</string>
    <string name="saved_gender">SAVED_GENDER</string>
    <string name="saved_zipcode">SAVED_ZIPCODE</string>
    <string name="saved_value_cool">SAVED_VALUE_COOL</string>
    <string name="saved_value_cold">SAVED_VALUE_COLD</string>
    <string name="saved_value_warm">SAVED_VALUE_WARM</string>
    <string name="saved_value_hot">SAVED_VALUE_HOT</string>

    <string name="headwear">Headwear</string>
    <string name="top">Tops</string>
    <string name="bottom">Bottoms</string>
    <string name="footwear">Footwear</string>

    <string name="customize_item">Customize Item</string>
    <string name="set_weather_type">Set weather types:</string>
    <string name="cool">Cool</string>
    <string name="cold">Cold</string>
    <string name="warm">Warm</string>
    <string name="hot">Hot</string>
    <string name="rainy">Rainy</string>
    <string name="snowy">Snowy</string>

    <string name="set_occasion">Set occasions:</string>
    <string name="casual">Casual</string>
    <string name="business_casual">Business Casual</string>
    <string name="business">Business</string>
    <string name="formal">Formal</string>
    <string name="black_tie">Black Tie</string>

    <string name="pick_color">Pick a color:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>
