<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hackathon.dealeron.clozet.SettingsActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/choose_unit"
            android:textSize="18sp"/>

        <RadioGroup
            android:id="@+id/radio_unit_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp">

            <RadioButton
                android:id="@+id/radio_fahrenheit_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fahrenheit"/>

            <RadioButton
                android:id="@+id/radio_celsius_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/celsius"/>

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/choose_gender"
            android:textSize="18sp"/>

        <RadioGroup
            android:id="@+id/radio_gender_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp">

            <RadioButton
                android:id="@+id/radio_male_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"/>

            <RadioButton
                android:id="@+id/radio_female_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"/>

        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/enter_zipcode"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/zipcode_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/hint_zipcode"
                android:inputType="number"/>

        </LinearLayout>



    </LinearLayout>
</android.support.constraint.ConstraintLayout>
