<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.hackathon.dealeron.clozet.FullInventoryActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/weather_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:contentDescription="@string/weather" />

            <TextView
                android:id="@+id/weather_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/collapse_headwear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/headwear"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/headwear_selector"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:gravity="center">

            <ImageButton
                android:id="@+id/headwear_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/left_chevron"
                android:background="?android:selectableItemBackground"/>

            <ImageView
                android:id="@+id/headwear_item"
                android:layout_width="220sp"
                android:layout_height="250sp" />

            <ImageButton
                android:id="@+id/headwear_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/right_chevron"
                android:background="?android:selectableItemBackground" />
        </LinearLayout>

        <TextView
            android:id="@+id/collapse_top"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/top"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/top_selector"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:gravity="center">

            <ImageButton
                android:id="@+id/top_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/left_chevron"
                android:background="?android:selectableItemBackground"/>

            <ImageView
                android:id="@+id/top_item"
                android:layout_width="220sp"
                android:layout_height="250sp" />

            <ImageButton
                android:id="@+id/top_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/right_chevron"
                android:background="?android:selectableItemBackground" />
        </LinearLayout>

        <TextView
            android:id="@+id/collapse_bottom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/bottom"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/bottom_selector"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:gravity="center">

            <ImageButton
                android:id="@+id/bottom_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/left_chevron"
                android:background="?android:selectableItemBackground"/>

            <ImageView
                android:id="@+id/bottom_item"
                android:layout_width="220sp"
                android:layout_height="250sp" />

            <ImageButton
                android:id="@+id/bottom_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/right_chevron"
                android:background="?android:selectableItemBackground" />
        </LinearLayout>

        <TextView
            android:id="@+id/collapse_footwear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/footwear"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/footwear_selector"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:gravity="center">

            <ImageButton
                android:id="@+id/footwear_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/left_chevron"
                android:background="?android:selectableItemBackground"/>

            <ImageView
                android:id="@+id/footwear_item"
                android:layout_width="220sp"
                android:layout_height="250sp" />

            <ImageButton
                android:id="@+id/footwear_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/right_chevron"
                android:background="?android:selectableItemBackground" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
